--- a/app/templates/template_activate_account.html
+++ b/app/templates/template_activate_account.html
@@ -1,7 +1,7 @@
 {% autoescape off %}
 Activate your Knowmona account
 
-Hello {{ user.nickname }}!
+Hello!
 
 Please click on the link below to confirm your registration:
 
